Added buy Crate and MisCrate

--- a/src/main/main/views/bierview.fxml
+++ b/src/main/main/views/bierview.fxml
@@ -52,10 +52,10 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Button layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
+            <Button fx:id="misBeer0" layoutY="97.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
             <Button fx:id="beerDrank0" layoutY="39.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="60.0" prefWidth="125.0" text="Bier Gepakt" />
-            <Button layoutX="125.0" layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
-            <Button layoutX="125.0" layoutY="39.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
+            <Button fx:id="misKrat0" layoutX="125.0" layoutY="97.0" mnemonicParsing="false" onAction="#misKratButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
+            <Button fx:id="kratKoop0" layoutX="125.0" layoutY="39.0" onAction="#kratKoopButtonClicked"  mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
             <Label fx:id="stockAcc0" layoutX="229.0" layoutY="14.0" text="##">
                <font>
                   <Font size="14.0" />
@@ -78,10 +78,10 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Button layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
+            <Button fx:id="misBeer1" layoutY="97.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
             <Button fx:id="beerDrank1" layoutY="39.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="60.0" prefWidth="125.0" text="Bier Gepakt" />
-            <Button layoutX="125.0" layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
-            <Button layoutX="125.0" layoutY="39.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
+            <Button fx:id="misKrat1" layoutX="125.0" layoutY="97.0" onAction="#misKratButtonClicked" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
+            <Button fx:id="kratKoop1" layoutX="125.0" layoutY="39.0" onAction="#kratKoopButtonClicked" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
             <Label fx:id="stockAcc1" layoutX="227.0" layoutY="14.0" text="##">
                <font>
                   <Font size="14.0" />
@@ -100,10 +100,10 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Button layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
+            <Button fx:id="misBeer2" layoutY="97.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
             <Button fx:id="beerDrank2" layoutY="39.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="60.0" prefWidth="125.0" text="Bier Gepakt" />
-            <Button layoutX="125.0" layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
-            <Button layoutX="125.0" layoutY="39.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
+            <Button fx:id="misKrat2" layoutX="125.0" layoutY="97.0" onAction="#misKratButtonClicked" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
+            <Button fx:id="kratKoop2" layoutX="125.0" layoutY="39.0" onAction="#kratKoopButtonClicked" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
             <Label fx:id="stockAcc2" layoutX="226.0" layoutY="14.0" text="##">
                <font>
                   <Font size="14.0" />
@@ -122,10 +122,10 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Button layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
+            <Button fx:id="misBeer3" layoutY="97.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
             <Button fx:id="beerDrank3" layoutY="39.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="60.0" prefWidth="125.0" text="Bier Gepakt" />
-            <Button layoutX="125.0" layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
-            <Button layoutX="125.0" layoutY="39.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
+            <Button fx:id="misKrat3" layoutX="125.0" layoutY="97.0" onAction="#misKratButtonClicked" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
+            <Button fx:id="kratKoop3" layoutX="125.0" layoutY="39.0" onAction="#kratKoopButtonClicked" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
             <Label fx:id="stockAcc3" layoutX="228.0" layoutY="15.0" text="##">
                <font>
                   <Font size="14.0" />
@@ -144,10 +144,10 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Button layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
+            <Button fx:id="misBeer4" layoutY="97.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
             <Button fx:id="beerDrank4" layoutY="39.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="60.0" prefWidth="125.0" text="Bier Gepakt" />
-            <Button layoutX="125.0" layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
-            <Button layoutX="125.0" layoutY="39.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
+            <Button fx:id="misKrat4" layoutX="125.0" layoutY="97.0" onAction="#misKratButtonClicked" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
+            <Button fx:id="kratKoop4" layoutX="125.0" layoutY="39.0" onAction="#kratKoopButtonClicked" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
             <Label fx:id="stockAcc4" layoutX="230.0" layoutY="15.0" text="##">
                <font>
                   <Font size="14.0" />
@@ -166,10 +166,10 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Button layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
+            <Button fx:id="misBeer5" layoutY="97.0" mnemonicParsing="false" onAction="#misBeerButtonClicked" prefHeight="40.0" prefWidth="125.0" text="MisBier" />
             <Button fx:id="beerDrank5" layoutY="39.0" mnemonicParsing="false" onAction="#drankButtonClicked" prefHeight="60.0" prefWidth="125.0" text="Bier Gepakt" />
-            <Button layoutX="125.0" layoutY="97.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
-            <Button layoutX="125.0" layoutY="39.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
+            <Button fx:id="misKrat5"  layoutX="125.0" layoutY="97.0" onAction="#misKratButtonClicked" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="MisKrat" />
+            <Button fx:id="kratKoop5" layoutX="125.0" layoutY="39.0" onAction="#kratKoopButtonClicked" mnemonicParsing="false" prefHeight="60.0" prefWidth="125.0" text="Krat gekocht" />
             <Label fx:id="stockAcc5" layoutX="227.0" layoutY="16.0" text="##">
                <font>
                   <Font size="14.0" />
