--- a/src/main/main/views/mainView.fxml
+++ b/src/main/main/views/mainView.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024.0" prefWidth="1280.0" style="-fx-background-color: &quot;3c9ee0&quot;;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.contollers.MainController">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024.0" prefWidth="1280.0" style="-fx-background-color: &quot;3c9ee0&quot;;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.contollers.MainController">
    <children>
       <Pane id="topbar" prefHeight="125.0" prefWidth="1280.0">
          <children>
-            <Button fx:id="bierverliesButton1" layoutX="1080.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="200.0" text="Instellingen">
+            <Button fx:id="instellingen" layoutX="1080.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="200.0" text="Instellingen">
                <font>
                   <Font size="28.0" />
                </font>
