--- a/src/main/main/views/mainView.fxml
+++ b/src/main/main/views/mainView.fxml
@@ -9,7 +9,7 @@
    <children>
       <Pane id="topbar" prefHeight="125.0" prefWidth="1280.0">
          <children>
-            <Button fx:id="instellingen" layoutX="1080.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="200.0" text="Instellingen">
+            <Button fx:id="instellingen" layoutX="1080.0" mnemonicParsing="false" onAction="#instellingenView" prefHeight="120.0" prefWidth="200.0" text="Instellingen">
                <font>
                   <Font size="28.0" />
                </font>
