--- a/src/main/resources/views/instellingenView.fxml
+++ b/src/main/resources/views/instellingenView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="901.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.contollers.InstellingenViewController">
+<AnchorPane prefHeight="901.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.InstellingenViewController">
    <children>
       <Pane layoutX="15.0" layoutY="14.0" prefHeight="100.0" prefWidth="1250.0">
          <children>
